--- a/SalaryCalculation.Api/SalaryCalculation.Api.csproj
+++ b/SalaryCalculation.Api/SalaryCalculation.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataAccess\Salarycalculation.DataAccess.csproj" />
     <ProjectReference Include="..\SalaryCalculation.Application\SalaryCalculation.Application.csproj" />
     <ProjectReference Include="..\SalaryCalculation.Domain\SalaryCalculation.Domain.csproj" />
   </ItemGroup>
