--- a/SalaryCalculation.Application/SalaryCalculation.Application.csproj
+++ b/SalaryCalculation.Application/SalaryCalculation.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\Salarycalculation.DataAccess.csproj" />
     <ProjectReference Include="..\SalaryCalculation.Domain\SalaryCalculation.Domain.csproj" />
   </ItemGroup>
 
