refactor: replace services

--- a/SalaryCalculation.Api/Properties/launchSettings.json
+++ b/SalaryCalculation.Api/Properties/launchSettings.json
@@ -1,14 +1,14 @@
 ﻿{
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "anonymousAuthentication": true
   },
   "profiles": {
     "SalaryCalculation.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
